manifest/jagger/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jagger-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: jagger
  type: ClusterIP
