manifest/jagger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.org/client-max-body-size: 100m
  name: jagger-ingress
spec:
  rules:
  - host: fedmanager.domain.com
    http:
      paths:
      - backend:
          service:
            name: jagger-svc
            port:
              number: 80
        path: /rr3
        pathType: Prefix
  tls:
  - hosts:
    - fedmanager.domain.com
    secretName: jagger-tls-cert
